housekeeping: When the enumerator fails on leaf nodes, delete them.

https://bugzilla.gnome.org/show_bug.cgi?id=701528